--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "./built",
-        "target": "ES2021"
+        "target": "ES2020",
+        "sourceMap": true
     },
     "include": [
         "./src/**/*"
